version/0.31/_sources/api/solver/_autosummary/settings/interface_2.rst.txt
:orphan:

.. _interface_2:

interface
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.interface_2
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_3>`                                     Create mesh interfaces.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`interface_2_child <interface_2_child>`


.. rubric:: Included in:

========================================   ===============================

Parent                                                             Summary

========================================   ===============================
:ref:`mesh_interfaces <mesh_interfaces>`       The mesh interfaces object.

========================================   ===============================

